[metadata]
name = pypeernet
version = 1.0.1
author = Sunip K. Mukherjee
author_email = sunipkmukherjee@gmail.com
description = Python bindings for PeerNet (https://github.com/sunipkm/peernet.git)
url = https://github.com/sunipkm/pypeernet
keywords =
  p2p
  networking
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Networking :: Peer-to-peer
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
include_package_data = True
install_requires =
package_dir=
  =./

[options.packages.find]
  where=./

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
